hphp/test/zend/bad/ext/gd/tests/imagefilter_error2.php
<?php
$image = imagecreatetruecolor(180, 30);

var_dump(imagefilter($image, 'wrong parameter'));
?>